Revision history for Perl extension App::Sqitch

0.998
     - Fixed a bug in `sqitch engine update-config` where it would add data to
       config files that did not previously have them, or report that data was
       present in nonexistent config files.
     - Added the `releases` table to the databases. This table will keep track
       of releases of the Sqitch registry schema.

0.997 2014-11-04T22:52:23Z
     [New Features]
     - Added support for new target properties. In addition to the existing
       `uri`, `client`, and `registry` properties, targets may also configure
       these properties via the new `--set` option to and `set-*` actions on
       the `target` command:
       * `top_dir`
       * `plan_file`
       * `extension`
       * `deploy_dir`
       * `revert_dir`
       * `verify_dir`
     - Added support for new engine configuration variables. In addition to
       the existing `target`, `client`, and `registry` variables, engine
       configuration may also include these variables:
       * `top_dir`
       * `plan_file`
       * `extension`
       * `deploy_dir`
       * `revert_dir`
       * `verify_dir`
     - Rationalized the hierarchical configuration of deployment targets. The
       properties of any given target will now be determined by examining
       values in the following order:
       * Command-line options
       * Target configuration
       * Engine configuration
       * Core configuration
       * Reasonable engine-specific defaults
     - Added the `engine` command to simplify engine configuration. This
       complements the newly-improved `target` command. Run `sqitch engine
       update-config` to update deprecated engine configurations and start
       using it.
     - Added the sqitch-configuration guide to provide an overview of core,
       engine, and target configuration. Includes some use-case examples and
       best suggested practices.
     [Improvements]