@@ -1,0 +1,10 @@
+BEGIN;
+
+CREATE TABLE releases (
+    version         FLOAT       PRIMARY KEY,
+    installed_at    DATETIME    NOT NULL DEFAULT CURRENT_TIMESTAMP,
+    installer_name  TEXT        NOT NULL,
+    installer_email TEXT        NOT NULL
+);
+
+COMMIT;
