@@ -56,6 +56,7 @@ sub _in_expr {
 
 sub _register_release {
     my $self    = shift;
+    my $version = shift || $self->registry_release;
     my $sqitch  = $self->sqitch;
     my $ts      = $self->_ts_default;
 
@@ -63,9 +64,19 @@ sub _register_release {
     $self->dbh->do(qq{
         INSERT INTO releases (version, installed_at, installer_name, installer_email)
         VALUES (?, $ts, ?, ?)
-    }, undef, $self->registry_version, $sqitch->user_name, $sqitch->user_email);
+    }, undef, $version, $sqitch->user_name, $sqitch->user_email);
     $self->finish_work;
     return $self;
+}
+
+sub registry_version {
+    my $self = shift;
+    try {
+        $self->dbh->selectcol_arrayref('SELECT MAX(version) FROM releases')->[0];
+    } catch {
+        return 0 if $self->_no_table_error;
+        die $_;
+    };
 }
 
 sub _cid {
