@@ -72,10 +72,31 @@ sub run {
         ok !$engine->initialized, 'Database should not yet be initialized';
         ok $engine->initialize, 'Initialize the database';
         ok $engine->initialized, 'Database should now be initialized';
+        ok !$engine->needs_upgrade, 'Engine should not need upgrading';
         is_deeply $engine->dbh->selectall_arrayref(
             'SELECT version, installer_name, installer_email FROM releases'
-        ), [[0.9, $sqitch->user_name, $sqitch->user_email]],
+        ), [[$engine->registry_release, $sqitch->user_name, $sqitch->user_email]],
             'The release should be registered';
+
+        # Let's make sure upgrades work.
+        $engine->dbh->do('DROP TABLE releases');
+        ok $engine->needs_upgrade, 'Engine should need upgrading';
+        MOCKINFO: {
+            my $sqitch_mocker = Test::MockModule->new(ref $sqitch);
+            my @args;
+            $sqitch_mocker->mock(info => sub { shift; push @args => @_ });
+            ok $engine->upgrade_registry, 'Upgrade the registry';
+            is_deeply \@args, [__x(
+                'Upgrading from: {old} to {new}',
+                old => 0,
+                new => '1.0',
+            )], 'Should have info output for upgrade';
+        }
+        ok !$engine->needs_upgrade, 'Engine should no longer need upgrading';
+        is_deeply $engine->dbh->selectall_arrayref(
+            'SELECT version, installer_name, installer_email FROM releases'
+        ), [[$engine->registry_release, $sqitch->user_name, $sqitch->user_email]],
+            'The release should be registered again';
 
         # Try it with a different Sqitch DB.
         $target = App::Sqitch::Target->new(
